--- a/templates/client/show.html.twig
+++ b/templates/client/show.html.twig
@@ -8,15 +8,11 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ client.id }}</td>
-            </tr>
-            <tr>
                 <th>Name</th>
                 <td>{{ client.name }}</td>
             </tr>
             <tr>
-                <th>DateOfBirth</th>
+                <th>Date of Birth</th>
                 <td>{{ client.dateOfBirth ? client.dateOfBirth|date('Y-m-d') : '' }}</td>
             </tr>
             <tr>
@@ -36,7 +32,11 @@
                 <td>{% if (client.photo) %}<img src="{{ asset('uploads/photos/' ~ client.photo) }}" alt="Photo">{% endif %}</td>
             </tr>
             <tr>
-                <th>IsActive</th>
+                <th>Confirmed</th>
+                <td>{{ client.emailConfirmationCode ? 'No' : 'Yes' }}</td>
+            </tr>
+            <tr>
+                <th>Active</th>
                 <td>{{ client.isActive ? 'Yes' : 'No' }}</td>
             </tr>
         </tbody>
