--- a/templates/emails/confirm_registration.html.twig
+++ b/templates/emails/confirm_registration.html.twig
@@ -1,4 +1,4 @@
-<h3>Registration Confirmation</h3>
+<h3>Confirm Registration</h3>
 
 <p>
     Hi {{ client.name }}! To complete registration, please
