add the View Group Sessions page to the Client profile

--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -34,5 +34,6 @@
         </tbody>
     </table>
 
+    <a href="{{ path('profile_group_sessions') }}">group sessions</a>
     <a href="{{ path('profile_change_password') }}">change password</a>
 {% endblock %}
