--- a/templates/index/activate.html.twig
+++ b/templates/index/activate.html.twig
@@ -7,6 +7,6 @@
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <button class="btn">{{ 'Activate' }}</button>
+        <button class="btn">Activate</button>
     {{ form_end(form) }}
 {% endblock %}
