--- a/templates/profile/change_password.html.twig
+++ b/templates/profile/change_password.html.twig
@@ -7,6 +7,6 @@
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <button class="btn">{{ 'Change' }}</button>
+        <button class="btn">Change</button>
     {{ form_end(form) }}
 {% endblock %}
