add links to the admin page

--- a/templates/group_session/index.html.twig
+++ b/templates/group_session/index.html.twig
@@ -35,5 +35,7 @@
         </tbody>
     </table>
 
+    <a href="{{ path('admin_index') }}">back to admin</a>
+
     <a href="{{ path('group_session_new') }}">Create new</a>
 {% endblock %}
