--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -43,5 +43,7 @@
         </tbody>
     </table>
 
+    <a href="{{ path('admin_index') }}">back to admin</a>
+
     <a href="{{ path('client_new') }}">Create new</a>
 {% endblock %}
