add Log Out links

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -8,5 +8,6 @@
     <ul>
         <li><a href="{{ path('client_index') }}">Manage Clients</a></li>
         <li><a href="{{ path('group_session_index') }}">Manage Group Sessions</a></li>
+        <li><a href="{{ path('security_logout') }}">Log out</a></li>
     </ul>
 {% endblock %}
