--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -34,6 +34,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('profile_subscriptions') }}">subscriptions</a>
-    <a href="{{ path('profile_change_password') }}">change password</a>
+    <a href="{{ path('profile_subscriptions') }}">Subscriptions</a>
+    <a href="{{ path('profile_change_password') }}">Change password</a>
+    <a href="{{ path('security_logout') }}">Log out</a>
 {% endblock %}
